--- a/BitteEspacios.html
+++ b/BitteEspacios.html
@@ -123,7 +123,7 @@
             <div class="side-panel-block">
                 <div class="side-panel-wrap">
                     <div class="the-logo">
-                        <a href="index-html">
+                        <a href="Bitte_Ahome.html">
                             <img src="images/logo-footer.svg" alt="Theratio">
                         </a>                    
                     </div>
@@ -156,21 +156,21 @@
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
@@ -252,7 +252,7 @@
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="#">ALberca</a></h5>
+                                                <h5><a class="title-link" href="#">Alberca</a></h5>
                                                 <!-- <p class="portfolio-cates"><a href="#">Amenidades</a></p>  -->
                                             </div>           
                                             <a class="overlay" href="#"></a>
@@ -266,7 +266,7 @@
                                                 <img src="./images/home/bitte_amenidades_2.jpg" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Centro de Negocios</h5>
+                                                <h5>Centro de Negocio</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
@@ -309,13 +309,13 @@
                                                 <img src="./images/home/bitte_amenidades_4.jpg" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Centro de Negocios</h5>
+                                                <h5>Espacios abiertos y áreas comerciales</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="#">Centro de Negocios</a></h5>
+                                                <h5><a class="title-link" href="#">Espacios abiertos y áreas comerciales</a></h5>
                                                 <!-- <p class="portfolio-cates"><a href="#">Furniture</a></p>  -->
                                             </div>
                                             <a class="overlay" href="#"></a>
@@ -329,13 +329,13 @@
                                                 <img src="./images/home/bitte_amenidades_5.jpg" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Terraza</h5>
+                                                <h5>Roof-top</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="#">Terraza</a></h5>
+                                                <h5><a class="title-link" href="#">Roof-top</a></h5>
                                                 <!-- <p class="portfolio-cates"><a href="#">Furniture</a></p>  -->
                                             </div>
                                             <a class="overlay" href="#"></a>
