--- a/bitteContacto.html
+++ b/bitteContacto.html
@@ -123,7 +123,7 @@
             <div class="side-panel-block">
                 <div class="side-panel-wrap">
                     <div class="the-logo">
-                        <a href="index-html">
+                        <a href="Bitte_Ahome.html">
                             <img src="images/logo-footer.svg" alt="Theratio">
                         </a>                    
                     </div>
@@ -156,21 +156,21 @@
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
@@ -264,7 +264,7 @@
                                 <!-- <span>[ our contact details ]</span> -->
                                 <h2 class="main-heading">Contáctanos</h2>
                             </div>
-                            <p>Llámenos o visítenos en cualquier momento, nos esforzamos por responder a todas las consultas dentro de las 24 horas en días hábiles. Estaremos encantados de responder a sus preguntas.</p>
+                            <p>Texto a la espera por grupo Bustamante. Texto a la espera por grupo Bustamante. Texto a la espera por grupo Bustamante. Texto a la espera por grupo Bustamante.  </p>
                             <div class="contact-info">
                                 <i class="ot-flaticon-place"></i>
                                 <div class="info-text">
