--- a/bitteDepa90mts.html
+++ b/bitteDepa90mts.html
@@ -123,7 +123,7 @@
             <div class="side-panel-block">
                 <div class="side-panel-wrap">
                     <div class="the-logo">
-                        <a href="index-html">
+                        <a href="Bitte_Ahome.html">
                             <img src="images/logo-footer.svg" alt="Theratio">
                         </a>                    
                     </div>
@@ -156,21 +156,21 @@
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
@@ -303,7 +303,7 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-5 mb-lg-0">
                                     <div class="room-area">
-                                        <h3>[60m<sup>2</sup>]</h3>
+                                        <h3>[90m<sup>2</sup>]</h3>
                                         <h6>Departamento</h6>
                                     </div>
                                 </div>
@@ -346,7 +346,7 @@
                                         <a href="./bitteDepa60mts.html">
                                             <div class="thumb-post-prev"><img src="./images/depto60/60.jpg" alt=""></div>
                                             <div class="info-post-prev">
-                                                <h6><span class="title-link">Departamento 60 mts</span></h6>
+                                                <h6><span class="title-link">Departamento 60 m<sup>2</sup></span></h6>
                                                 <span>[ 60m<sup>2</sup> ]</span>
                                             </div>
                                         </a>
