--- a/bitteDepaPH.html
+++ b/bitteDepaPH.html
@@ -123,58 +123,56 @@
             <div class="side-panel-block">
                 <div class="side-panel-wrap">
                     <div class="the-logo">
-                        <a href="index-html">
+                        <a href="Bitte_Ahome.html">
                             <img src="images/logo-footer.svg" alt="Theratio">
                         </a>                    
                     </div>
                     <div class="ot-heading">
                         <h2 class="main-heading">Galería</h2>
                     </div>
-                    <div class="image-gallery">
-                        <div id="gallery-1" class="gallery galleryid-102 gallery-columns-3 gallery-size-thumbnail">
-                            <figure class="gallery-item">
-                                <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria1.jpg"></a> -->
-                                        <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
-                                    <!-- </a> -->
-                                </div>
-                            </figure>
-                            <figure class="gallery-item">
-                                <div class="gallery-icon landscape">
-                                    <!-- <a href="#">   -->
-                                        <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
-                                    <!-- </a> -->
-                                </div>
-                            </figure>
-                            <figure class="gallery-item">
-                                <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
-                                    <!-- </a> -->
-                                </div>
-                            </figure>
-                            <figure class="gallery-item">
-                                <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
-                                    <!-- </a> -->
-                                </div>
-                            </figure>
-                            <figure class="gallery-item">
-                                <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
-                                    <!-- </a> -->
-                                </div>
-                            </figure>
-                            <figure class="gallery-item">
-                                <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
-                                    <!-- </a> -->
-                                </div>
-                            </figure>
-                        </div>
+                    <div id="gallery-1" class="gallery galleryid-102 gallery-columns-3 gallery-size-thumbnail">
+                        <figure class="gallery-item">
+                            <div class="gallery-icon landscape">
+                                <!-- <a href="./images/galeria/bitte_Galeria1.jpg"></a> -->
+                                    <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
+                                <!-- </a> -->
+                            </div>
+                        </figure>
+                        <figure class="gallery-item">
+                            <div class="gallery-icon landscape">
+                                <!-- <a href="#">   -->
+                                    <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
+                                <!-- </a> -->
+                            </div>
+                        </figure>
+                        <figure class="gallery-item">
+                            <div class="gallery-icon landscape">
+                                <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
+                                    <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
+                                <!-- </a> -->
+                            </div>
+                        </figure>
+                        <figure class="gallery-item">
+                            <div class="gallery-icon landscape">
+                                <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
+                                    <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
+                                <!-- </a> -->
+                            </div>
+                        </figure>
+                        <figure class="gallery-item">
+                            <div class="gallery-icon landscape">
+                                <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
+                                    <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
+                                <!-- </a> -->
+                            </div>
+                        </figure>
+                        <figure class="gallery-item">
+                            <div class="gallery-icon landscape">
+                                <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
+                                    <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
+                                <!-- </a> -->
+                            </div>
+                        </figure>
                     </div>
                     <div class="ot-heading ">
                         <h2 class="main-heading">Contactanos</h2>
@@ -303,7 +301,7 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-5 mb-lg-0">
                                     <div class="room-area">
-                                        <h3>[60m<sup>2</sup>]</h3>
+                                        <h3>[180m<sup>2</sup>]</h3>
                                         <h6>Departamento</h6>
                                     </div>
                                 </div>
