--- a/bitteDeptos.html
+++ b/bitteDeptos.html
@@ -123,7 +123,7 @@
             <div class="side-panel-block">
                 <div class="side-panel-wrap">
                     <div class="the-logo">
-                        <a href="index-html">
+                        <a href="Bitte_Ahome.html">
                             <img src="images/logo-footer.svg" alt="Theratio">
                         </a>                    
                     </div>
@@ -134,44 +134,44 @@
                         <div id="gallery-1" class="gallery galleryid-102 gallery-columns-3 gallery-size-thumbnail">
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <a href="https://via.placeholder.com/150x150.png">
-                                        <img src="https://via.placeholder.com/150x150.png" class="" alt="">
-                                    </a>
+                                    <!-- <a href="./images/galeria/bitte_Galeria1.jpg"></a> -->
+                                        <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
+                                    <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <a href="https://via.placeholder.com/150x150.png">
-                                        <img src="https://via.placeholder.com/150x150.png" class="" alt="">
-                                    </a>
+                                    <!-- <a href="#">   -->
+                                        <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
+                                    <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <a href="https://via.placeholder.com/150x150.png">
-                                        <img src="https://via.placeholder.com/150x150.png" class="" alt="">
-                                    </a>
+                                    <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
+                                        <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
+                                    <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <a href="https://via.placeholder.com/150x150.png">
-                                        <img src="https://via.placeholder.com/150x150.png" class="" alt="">
-                                    </a>
+                                    <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
+                                        <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
+                                    <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <a href="https://via.placeholder.com/150x150.png">
-                                        <img src="https://via.placeholder.com/150x150.png" class="" alt="">
-                                    </a>
+                                    <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
+                                        <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
+                                    <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <a href="https://via.placeholder.com/150x150.png">
-                                        <img src="https://via.placeholder.com/150x150.png" class="" alt="">
-                                    </a>
+                                    <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
+                                        <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
+                                    <!-- </a> -->
                                 </div>
                             </figure>
                         </div>
@@ -211,7 +211,7 @@
             <div class="page-header dtable text-center header-transparent pheader-portfolio">
                 <div class="dcell">
                     <div class="container">
-                        <h1 class="page-title">Estilo minimalista y espacio abiertos  </h1>
+                        <h1 class="page-title">Estilo minimalista </h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="Bitte_Ahome.html">Inicio</a></li>
                             <!-- <li class="active">Portfolio Info Under Image</li> -->
@@ -252,8 +252,8 @@
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner text-center">
-                                                <h5><a class="title-link" href="./bitteDepa60mts.html">Departamento 60 mts<sup>2</sup></a></h5>
-                                                <p class="portfolio-cates"><a href="#">60 mts</a></p> 
+                                                <h5><a class="title-link" href="./bitteDepa60mts.html">Departamento 60 m<sup>2</sup></a></h5>
+                                                <!-- <p class="portfolio-cates"><a href="#">60 mts</a></p>  -->
                                             </div>
                                             <a class="overlay" href="./bitteDepa60mts.html"></a>
                                         </div>
@@ -266,15 +266,15 @@
                                                 <img src="./images/depto90/90.jpg" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Departamento 90 mts<sup>2</sup></h5>
+                                                <h5>Departamento 90 m<sup>2</sup></h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner text-center">
-                                                <h5><a class="title-link" href="./bitteDepa90mts.html">Departamento 90 mts<sup>2</sup></a></h5>
+                                                <h5><a class="title-link" href="./bitteDepa90mts.html">Departamento 90 m<sup>2</sup></a></h5>
                                                 <p class="portfolio-cates">
-                                                    <a href="#">90 mts</a>
+                                                    <!-- <a href="#">90 mts</a> -->
                                                     <!-- <a href="#">Interior</a> -->
                                                 </p>
                                             </div>
@@ -289,14 +289,14 @@
                                                 <img src="./images/deptoPH/ph.jpg" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Penthouse 90 y 120 mts<sup>2</sup></h5>
+                                                <h5>Penthouse 90 y 120 m<sup>2</sup></h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner text-center">
-                                                <h5><a class="title-link" href="./bitteDepaPH.html">Penthouse 90 y 180 mts<sup>2</sup></a></h5>
-                                                <p class="portfolio-cates"><a href="#">120 mts</a></p> 
+                                                <h5><a class="title-link" href="./bitteDepaPH.html">Penthouse 90 y 180 m<sup>2</sup></a></h5>
+                                                <!-- <p class="portfolio-cates"><a href="#">120 m</a></p>  -->
                                             </div>
                                             <a class="overlay" href="./bitteDepaPH.html"></a>
                                         </div>
