--- a/bitteDepa60mts.html
+++ b/bitteDepa60mts.html
@@ -123,7 +123,7 @@
             <div class="side-panel-block">
                 <div class="side-panel-wrap">
                     <div class="the-logo">
-                        <a href="index-html">
+                        <a href="Bitte_Ahome.html">
                             <img src="images/logo-footer.svg" alt="Theratio">
                         </a>                    
                     </div>
@@ -156,21 +156,21 @@
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
                                     <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
-                                        <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
+                                        <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
                                     <!-- </a> -->
                                 </div>
                             </figure>
