Âchanges in PH page with it images, change slider1 image in index

--- a/BitteEspacios.html
+++ b/BitteEspacios.html
@@ -266,13 +266,13 @@
                                                 <img src="./images/home/bitte_amenidades_2.jpg" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Centro de Negocio</h5>
+                                                <h5>Coworking</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="#">Centro de Negocios</h5></a></h5>
+                                                <h5><a class="title-link" href="#">Coworking</h5></a></h5>
                                                 <p class="portfolio-cates">
                                                     <!-- <a href="#">Decor</a>
                                                     <a href="#">Interior</a> -->
@@ -349,13 +349,13 @@
                                                 <img src="./images/home/bitte_amenidades_6.jpg" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Guardería</h5>
+                                                <h5>Ludoteca</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="#">Guardería</a></h5>
+                                                <h5><a class="title-link" href="#">Ludoteca</a></h5>
                                                 <!-- <p class="portfolio-cates"><a href="#">Furniture</a><a href="#">interior</a></p>  -->
                                             </div>
                                             <a class="overlay" href="#"></a>
