--- a/Bitte_Ahome.html
+++ b/Bitte_Ahome.html
@@ -482,7 +482,7 @@
 
                                     data-textAlign="['left','left','left','left']"
                 
-                                    > Estilo minimalista y  espacio abiertos
+                                    > Estilo minimalista
                                 </div>
                                                                     
                                 <!-- LAYER 5  Paragraph-->
