--- a/bitteDepa60mts.html
+++ b/bitteDepa60mts.html
@@ -40,7 +40,7 @@
                                 <div class="octf-col menu-col no-padding">
                                     <nav id="site-navigation" class="main-navigation">
                                         <ul class="menu">
-                                            <li><a href="about-us.html">Bitte    </a></li>
+                                            <li><a href="Bitte_Ahome.html">Bitte    </a></li>
                                             <li><a href="BitteEspacios.html">Espacios</a></li>
                                             <li><a href="bitteDeptos.html">Departamentos</a></li>
                                             <li><a href="bitteContacto.html">Contacto</a></li>
@@ -346,7 +346,7 @@
                                         <a href="./bitteDepa90mts.html">
                                             <div class="thumb-post-prev"><img src="./images/depto90/90.jpg" alt=""></div>
                                             <div class="info-post-prev">
-                                                <h6><span class="title-link">Departamento 90mts</span></h6>
+                                                <h6><span class="title-link">Departamento 90 m<sup>2</sup></span></h6>
                                                 <span>[ 90m<sup>2</sup> ]</span>
                                             </div>
                                         </a>
