--- a/bitteDepaPH.html
+++ b/bitteDepaPH.html
@@ -264,7 +264,7 @@
                                     </figure>
                                     <figure class="gallery-item">
                                         <div class="gallery-icon portrait">
-                                            <a href="./images/deptoPH/Bitte_PH_g1b.jpg">
+                                            <a href="./images/deptoPH/Bitte_PH_g2b.jpg">
                                                 <img src="./images/deptoPH/Bitte_PH_g2.jpg" alt="">
                                                 <span class="overlay"><i class="ot-flaticon-add"></i></span>
                                             </a>
@@ -272,7 +272,7 @@
                                     </figure>
                                     <figure class="gallery-item">
                                         <div class="gallery-icon portrait">
-                                            <a href="./images/deptoPH/Bitte_PH_g1b.jpg">
+                                            <a href="./images/deptoPH/Bitte_PH_g3b.jpg">
                                                 <img src="./images/deptoPH/Bitte_PH_g3.jpg" alt="">
                                                 <span class="overlay"><i class="ot-flaticon-add"></i></span>
                                             </a>
@@ -280,7 +280,7 @@
                                     </figure>
                                     <figure class="gallery-item">
                                         <div class="gallery-icon portrait">
-                                            <a href="./images/deptoPH/Bitte_PH_g1b.jpg">
+                                            <a href="./images/deptoPH/Bitte_PH_g4b.jpg">
                                                 <img src="./images/deptoPH/Bitte_PH_g4.jpg" alt="">
                                                 <span class="overlay"><i class="ot-flaticon-add"></i></span>
                                             </a>
@@ -344,7 +344,7 @@
                                         <a href="./bitteDepa60mts.html">
                                             <div class="thumb-post-prev"><img src="./images/depto60/60.jpg" alt=""></div>
                                             <div class="info-post-prev">
-                                                <h6><span class="title-link">Departamento 60 mts</span></h6>
+                                                <h6><span class="title-link">Departamento 60 m<sup>2</sup></span></h6>
                                                 <span>[ 60m<sup>2</sup> ]</span>
                                             </div>
                                         </a>
@@ -353,7 +353,7 @@
                                         <a href="./bitteDepa90mts.html">
                                             <div class="thumb-post-next"><img src="./images/depto90/90.jpg" alt=""></div>
                                             <div class="info-post-next">
-                                                <h6><span class="title-link">Departamento 90mts</span></h6>
+                                                <h6><span class="title-link">Departamento m<sup>2</sup></span></h6>
                                                 <span>[ 90m<sup>2</sup> ]</span>
                                             </div>
                                         </a>
